@@ -4,6 +4,11 @@
 
   * Fix cwd for hooks. (Fabian Grünbichler)
 
+ API CHANGES
+
+  * GitFile now raises ``FileLocked`` when encountering a lock
+    rather than OSError(EEXIST). (Jelmer Vernooĳ)
+
 0.18.4	2017-10-01
 
  BUG FIXES
